# ilp-spr-distance

./: CMakeLists.txt  README.md  appendspr.sh  runbenches.sh  spr.sh
benchmark/: CMakeLists.txt  FindBenchMark.cmake  benchmark.cpp
benchmark/csv/: rmq_compare.csv  size10benches.csv  size20benches.csv  size40benchs.csv
src/: CMakeLists.txt  main.cpp  main.h
src/glpk/: orig.cpp  orig.h  param.cpp  param.h
src/newick/: lexer.cpp  lexer.h  parser.cpp  parser.h  token.cpp  token.h
src/phylotree/: euler_tree.cpp  euler_tree.h  sparse_table.h  tree.cpp  tree.h
statistics/: CMakeLists.txt  statistics.cpp
tests/: CMakeLists.txt  FindGecode.cmake  experimental.cpp  glpk.cpp  lexical.cpp  other.cpp  tree.cpp
tests/trees/: tree101_20_8.txt  tree102_20_3.txt  tree106_20_4.txt  tree110_20_6.txt  tree111_20_3.txt  tree112_20_8.txt  tree114_20_5.txt  tree116_20_9.txt  tree117_20_6.txt  tree119_20_6.txt  tree11_20_3.txt  tree120_20_8.txt  tree123_20_3.txt  tree125_20_7.txt  tree126_20_8.txt  tree127_20_6.txt  tree128_20_3.txt  tree130_20_7.txt  tree131_20_9.txt  tree132_20_5.txt  tree134_20_10.txt  tree136_20_9.txt  tree13_20_7.txt  tree141_20_11.txt  tree146_20_12.txt  tree148_20_7.txt  tree149_20_10.txt  tree150_20_9.txt  tree151_20_11.txt  tree152_20_8.txt  tree153_20_8.txt  tree155_20_8.txt  tree157_20_9.txt  tree15_20_4.txt  tree161_20_11.txt  tree165_20_8.txt  tree166_20_12.txt  tree16_20_8.txt  tree174_20_11.txt  tree177_20_12.txt  (+79 more)
tests/trees/leaves_10/: tree1000_10_3.txt  tree1001_10_3.txt  tree1002_10_3.txt  tree1003_10_4.txt  tree1004_10_4.txt  tree1005_10_3.txt  tree1006_10_3.txt  tree1007_10_5.txt  tree1008_10_3.txt  tree1009_10_3.txt  tree100_10_5.txt  tree1010_10_5.txt  tree1011_10_4.txt  tree1012_10_5.txt  tree1013_10_4.txt  tree1014_10_5.txt  tree1015_10_3.txt  tree1016_10_3.txt  tree1017_10_5.txt  tree1018_10_3.txt  tree1019_10_4.txt  tree101_10_6.txt  tree1020_10_4.txt  tree1021_10_3.txt  tree1022_10_4.txt  tree1023_10_4.txt  tree1024_10_1.txt  tree1025_10_1.txt  tree1026_10_1.txt  tree1027_10_1.txt  tree1028_10_5.txt  tree1029_10_1.txt  tree102_10_3.txt  tree1030_10_4.txt  tree1031_10_5.txt  tree1032_10_4.txt  tree1033_10_4.txt  tree1034_10_3.txt  tree1035_10_5.txt  tree1036_10_2.txt  (+1277 more)
tests/trees/leaves_20/: tree100_20_11.txt  tree103_20_4.txt  tree104_20_4.txt  tree105_20_4.txt  tree107_20_6.txt  tree108_20_3.txt  tree109_20_7.txt  tree10_20_5.txt  tree113_20_6.txt  tree115_20_6.txt  tree118_20_5.txt  tree121_20_7.txt  tree122_20_7.txt  tree124_20_8.txt  tree129_20_9.txt  tree12_20_6.txt  tree133_20_4.txt  tree135_20_8.txt  tree137_20_5.txt  tree138_20_5.txt  tree139_20_10.txt  tree140_20_9.txt  tree142_20_6.txt  tree143_20_6.txt  tree144_20_10.txt  tree145_20_9.txt  tree147_20_7.txt  tree14_20_6.txt  tree154_20_10.txt  tree156_20_11.txt  tree158_20_8.txt  tree159_20_11.txt  tree160_20_8.txt  tree162_20_8.txt  tree163_20_9.txt  tree164_20_11.txt  tree167_20_11.txt  tree168_20_8.txt  tree169_20_11.txt  tree170_20_8.txt  (+119 more)
tests/trees/leaves_30/: tree10_30_6.txt  tree11_30_3.txt  tree12_30_9.txt  tree13_30_8.txt  tree14_30_5.txt  tree15_30_8.txt  tree16_30_7.txt  tree17_30_9.txt  tree18_30_5.txt  tree19_30_9.txt  tree1_30_1.txt  tree20_30_9.txt  tree21_30_9.txt  tree22_30_7.txt  tree23_30_6.txt  tree24_30_11.txt  tree26_30_8.txt  tree27_30_8.txt  tree28_30_3.txt  tree29_30_11.txt  tree2_30_3.txt  tree31_30_9.txt  tree32_30_9.txt  tree33_30_4.txt  tree34_30_11.txt  tree36_30_10.txt  tree37_30_9.txt  tree38_30_6.txt  tree39_30_11.txt  tree3_30_5.txt  tree41_30_11.txt  tree42_30_10.txt  tree43_30_8.txt  tree44_30_11.txt  tree47_30_11.txt  tree48_30_10.txt  tree4_30_5.txt  tree53_30_9.txt  tree56_30_11.txt  tree58_30_11.txt  (+6 more)
tests/trees/leaves_30/toobig/: tree100_30_17.txt  tree101_30_16.txt  tree102_30_19.txt  tree103_30_17.txt  tree104_30_16.txt  tree105_30_18.txt  tree106_30_17.txt  tree107_30_19.txt  tree108_30_17.txt  tree109_30_18.txt  tree110_30_18.txt  tree111_30_18.txt  tree112_30_19.txt  tree113_30_18.txt  tree114_30_17.txt  tree115_30_19.txt  tree116_30_17.txt  tree117_30_18.txt  tree118_30_18.txt  tree119_30_19.txt  tree120_30_19.txt  tree121_30_18.txt  tree122_30_19.txt  (+78 more)
tests/trees/leaves_40/: tree100_40_25.txt  tree101_40_26.txt  tree102_40_25.txt  tree103_40_24.txt  tree104_40_26.txt  tree105_40_25.txt  tree106_40_25.txt  tree107_40_25.txt  tree108_40_23.txt  tree109_40_26.txt  tree10_40_10.txt  tree10_40_21.txt  tree110_40_25.txt  tree111_40_26.txt  tree112_40_25.txt  tree113_40_25.txt  tree114_40_26.txt  tree115_40_25.txt  tree116_40_26.txt  tree117_40_25.txt  tree118_40_25.txt  tree119_40_26.txt  tree11_40_18.txt  tree11_40_3.txt  tree120_40_24.txt  tree121_40_27.txt  tree122_40_24.txt  tree123_40_26.txt  tree124_40_26.txt  tree125_40_26.txt  tree126_40_27.txt  tree127_40_24.txt  tree128_40_26.txt  tree129_40_26.txt  tree12_40_13.txt  tree12_40_17.txt  tree130_40_27.txt  tree131_40_24.txt  tree132_40_25.txt  tree133_40_25.txt  (+241 more)
